fix secrets env ref

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,16 +8,16 @@ jobs:
     environment:
       name: PRO
     steps:
-      # - name: Docker login
-      #   run: docker login -u "$DOCKER_USER" -p "$DOCKER_PASS" docker.io
+      - name: Docker login
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }} docker.io
       - name: Checkout repository code
         uses: actions/checkout@v2
       - name: build
         run: |
-          docker build -t nikodonoso86/base-image:latest .
-          docker build -t nikodonoso86/base-image:$GITHUB_JOB .
+          docker build -t ${{ secrets.DOCKER_USER }}/base-image:latest .
+          docker build -t ${{ secrets.DOCKER_USER }}/base-image:$GITHUB_JOB .
       - name: push
         run: |
-          docker login -u "$DOCKER_USER" -p "$DOCKER_PASS" docker.io
-          docker push nikodonoso86/base-image:latest
-          docker push nikodonoso86/base-image:$GITHUB_JOB
+          # docker login -u $DOCKER_USER -p "$DOCKER_PASS"
+          docker push ${{ secrets.DOCKER_USER }}/base-image:latest
+          docker push ${{ secrets.DOCKER_USER }}/base-image:$GITHUB_JOB
