--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
       name: PRO
     steps:
       - name: Docker login
-        run: docker login --password=${{ secrets.DOCKER_PASS }} --username=${{ secrets.DOCKER_USER }}
+        run: docker login -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PASS }}
       - name: Checkout repository code
         uses: actions/checkout@v2
       - name: build
